# CudaTemplate

./: CMakeLists.txt  LICENSE  README.md
src/: main.cu
